updating titles and adding profile link

--- a/session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
+++ b/session7_vector_borne_modelling/session7_vector_borne_modelling.qmd
@@ -4,8 +4,8 @@ author: |
   | ***SPARK short course 'Mathematical Modelling of Infectious Diseases', Indonesia, June 2023***
   |
   | ***Developed and presented by <a href="https://www.doherty.edu.au/people/patricia-trish-campbell" 
-      >Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity***
-  | ***Updated and presented by Kartika Saraswati, for Indonesia June 2023 short course.***
+      >Dr Trish Campbell</a>, The University of Melbourne at The Peter Doherty Institute for Infection and Immunity***
+  | ***Updated and presented by <a href="https://www.linkedin.com/in/kartikasaraswati/?originalSubdomain=uk">Dr Kartika Saraswati</a>, for Indonesia June 2023 short course.***
 output: 
   html_document:
      self_contained: yes
