--- a/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
+++ b/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
@@ -432,7 +432,7 @@ In the Lotka-Volterra model the growth rates of the two populations are given by
 
 In the system above, $\alpha$ is the growth rate of the prey population; $\beta$ is the predation rate; δ is the growth rate of the predator population $\delta$ and; $\gamma$ is the death rate of the predator population. Note that the two animal populations interact through the predation term $\beta x(t)y(t)$.
 
-To complete the description of our model we supply initial conditions for the predator and prey populations which we denote $x_0$ and $y_0$ respectively. In particular we take for parameter values and initial conditions: $\alpha=1$, $\beta=2$, $\delta=1$ and $\gamma=1$; $x_0=2$ and $y_0=0.5$.
+To complete the description of our model we supply initial conditions for the predator and prey populations which we denote $y_0$ and $x_0$ respectively. In particular we take for parameter values and initial conditions: $\alpha=1$, $\beta=2$, $\delta=1$ and $\gamma=1$; $y_0=0.5$ and $x_0=2$.
 
 The below code blocks provide parameters and initial conditions for the system:
 
