--- a/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
+++ b/session2_differential_equations_in_r/session2_differential_equations_in_r.qmd
@@ -274,7 +274,7 @@ and initial conditions
     R_0 &= 0
 \end{align}
 
-solve the SIR model following the same steps described above for the population growth model. Plot your solution to generate the following figure:
+solve the SIR model following the same steps described above for the population growth model. Plot your solution to generate the following figure:  <!-- fixme: students should need to complete something about the equations themselves.-->
 
 ```{r sir-model, echo=T}
 SIRModel <- function(t, state, parameters) {
