changing likelihood surface title to reflect negativeness

--- a/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
+++ b/session5_fitting_models_in_r/session5_fitting_models_in_r.qmd
@@ -677,7 +677,7 @@ nll_plot <- nll_grid_results %>%
     geom_contour(breaks = c(100, 110, 120, 130, 200, 500, 1000, 4000)) +
     ylab("I(0)") +
     xlab("R0") +
-    ggtitle("Likelihood surface") +
+    ggtitle("Negative likelihood surface") +
     theme_bw()
 
 # Extract optimum from grid search
