--- a/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
+++ b/session9_modelling_interventions_in_r/session9_modelling_interventions_in_r.qmd
@@ -92,7 +92,7 @@ ggplot(first_wave, aes(x = Date, y = Cases)) +
     ylab("Daily cases") +
     xlab("") +
     ggtitle("Thailand's First Wave, Jan-Jun 2020") +
-    theme_bw()
+    theme_bw() 
 ```
 
 # Coding Interventions
@@ -110,6 +110,18 @@ We should filter down our data to the time period we want to fit to.
 ```{r filter-data}
 outbreak <- first_wave %>%
     filter(Date >= fitting_start_date, Date <= fitting_end_date)
+
+# Adding a plot showing the intervention times as a visual check
+ggplot(first_wave, aes(x = Date, y = Cases)) +
+    geom_col(fill = "gray") +
+    ylab("Daily cases") +
+    xlab("") +
+    ggtitle("Thailand's First Wave, Jan-Jun 2020, with intervention timings") +
+    theme_bw() +
+    geom_vline(xintercept = emergency_start_date, colour='firebrick', 
+               linetype='dashed', size=1.3) +
+    geom_vline(xintercept = curfew_start_date, colour='firebrick', 
+               linetype='dashed', size=1.3)
 ```
 
 One of the most important things when you're doing an optimisation is a decent initial guess at your parameter values. Luckily, in a previous session, we got a good estimate of R0, and we know a few things about how effective the various interventions might be.
